--- a/src/app/change/change.page.html
+++ b/src/app/change/change.page.html
@@ -1,50 +1,70 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>change</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>change</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content padding (scroll)="qq()" id="content" appMyscroll [scrollY]="qq()">
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
-<ion-item>aa</ion-item>
+<ion-content padding>
+    <ion-list>
+        <ion-list-header>
+            <ion-label>
+                Change data
+            </ion-label>
+        </ion-list-header>
+        <form [formGroup]="changeForm">
+            <div class="input-container">
+                <ion-item>
+                    <!--<ion-label position="fixed">Enter username</ion-label>-->
+                    <ion-input class="form-control" id="username" formControlName="username"
+                               placeholder="Enter username"></ion-input>
+                </ion-item>
+                <div *ngIf="username.invalid && (username.dirty || username.touched)" color="danger"
+                     class="alert alert-danger">
+                    <span class="error-msg">{{ getErrorMessage('username') }}</span>
+                </div>
+            </div>
+            <div formGroupName="matchingPasswords">
+                <div class="input-container">
+                    <ion-item>
+                        <!--<ion-label position="fixed">Confirm password</ion-label>-->
+                        <ion-input name="new_password" type="password" formControlName="new_password"
+                                   placeholder="New password"></ion-input>
+                    </ion-item>
+                    <ion-col *ngIf="new_password.invalid && (new_password.dirty || new_password.touched)"
+                             color="danger" class="alert alert-danger">
+                        <span class="error-msg">{{ getErrorMessage('new_password') }}</span>
+                    </ion-col>
+                </div>
+                <div class="input-container">
+                    <ion-item>
+                        <!--<ion-label position="fixed">Enter password</ion-label>-->
+                        <ion-input name="old_password" type="password" formControlName="old_password"
+                                   placeholder="Old password"></ion-input>
+                    </ion-item>
+                    <ion-col *ngIf="old_password.invalid && (old_password.dirty || old_password.touched)" color="danger"
+                             class="alert alert-danger">
+                        <span class="error-msg">{{ getErrorMessage('old_password') }}</span>
+                    </ion-col>
+                </div>
+            </div>
+            <div class="input-container">
+                <ion-row *ngIf="old_password.valid && new_password.valid && changeForm.get('matchingPasswords').valid">
+                    <ion-col class="error-msg">
+                        <span class="error-msg"ion-text>Passwords cannot be the same</span>
+                    </ion-col>
+                </ion-row>
+            </div>
+            <ion-item class="submit-btn-container">
+                <ion-grid>
+                    <ion-row justify-content-center>
+                        <ion-col size="12">
+                            <ion-button slot="" size="normal" class="submit-btn ion-col-3" color="primary"
+                                        (click)="submitChange()">Submit
+                            </ion-button>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+            </ion-item>
+        </form>
+    </ion-list>
 </ion-content>
