--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,34 +1,37 @@
-<ion-header swipeAll >
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title class="title-top" hidden>main</ion-title>
-    <ion-label color="success" class="top-price">2000 UAH</ion-label>
-  </ion-toolbar>
+<ion-header swipeAll>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+        <ion-title class="title-top" hidden>main</ion-title>
+        <ion-label color="success" class="top-price">2000 UAH</ion-label>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding [scrollY]="qq()">
-  <ion-card class="price-card"  (swiperight)="swipeAll($event)">
-    <ion-card-content>
-      <ion-label color="success">2000 UAH</ion-label>
-    </ion-card-content>
-  </ion-card>
-  <ion-card class="inf-list">
-    <ion-list>
-      <ion-item *ngFor="let i of items">{{i}}</ion-item>
-    </ion-list>
+    <ion-card class="price-card" (swiperight)="swipeAll($event)">
+        <ion-card-content>
+            <ion-label color="success">2000 UAH</ion-label>
+        </ion-card-content>
+    </ion-card>
+    <ion-card class="inf-list">
+        <ion-list>
+            <ion-item *ngFor="let i of items">
+                <div>{{i.description}}: </div>
+                <div [className]="i.type === 'decrease' ? 'decrease-color' : 'increase-color'">{{i.cost}}</div>
+            </ion-item>
+        </ion-list>
 
-    <ion-infinite-scroll threshold="20px" (ionInfinite)="loadData($event)">
-      <ion-infinite-scroll-content
-              loadingSpinner="bubbles"
-              loadingText="Loading more data...">
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
-  </ion-card>
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button routerDirection="forward" (click)="addPurchase()">
-    <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+        <ion-infinite-scroll threshold="20px" (ionInfinite)="loadData($event)">
+            <ion-infinite-scroll-content
+                    loadingSpinner="bubbles"
+                    loadingText="Loading more data...">
+            </ion-infinite-scroll-content>
+        </ion-infinite-scroll>
+    </ion-card>
+    <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+        <ion-fab-button routerDirection="forward" (click)="addPurchase()">
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
