changes to routing, add router guard

--- a/src/app/add-purchase/add-purchase.page.html
+++ b/src/app/add-purchase/add-purchase.page.html
@@ -29,7 +29,7 @@
 
                 <ion-item>
                     <ion-label>Amount</ion-label>
-                    <ion-input></ion-input>
+                    <ion-input name="cost" formControlName="cost" placeholder=""></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-button (click)="submitPurchase()">Submit</ion-button>
@@ -42,11 +42,11 @@
 
                 <ion-item>
                     <ion-label>Amount</ion-label>
-                    <ion-input></ion-input>
+                    <ion-input name="cost" formControlName="cost" placeholder=""></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label>Comment</ion-label>
-                    <ion-input></ion-input>
+                    <ion-input name="description" formControlName="description"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-button (click)="submitPurchase()">Submit</ion-button>
