--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,18 +1,196 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Ionic Blank
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <ion-item-sliding *ngFor="let link of listOfButtons">
-      <ion-item [href]="'/' + link" routerDirection="forward">
-        <ion-label>{{link}}</ion-label>
-      </ion-item>
-    </ion-item-sliding>
-  </ion-list>
+    <ion-list>
+        <ion-item-sliding *ngFor="let link of listOfButtons">
+            <ion-item [href]="'/' + link" routerDirection="forward">
+                <ion-label>{{link}}</ion-label>
+            </ion-item>
+        </ion-item-sliding>
+    </ion-list>
+    <!--***************-->
+    <!--<ion-icon src="/src/assets/icon/icon1.svg" size="large" style="font-size: 200px"></ion-icon>-->
+    <!--<svg id="bars" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 63.15 224.35" width="150px" height="300px">-->
+    <!--<defs>-->
+    <!--<style>.cls-1{fill:#dd238c;}.cls-2{fill:#ef4328;}.cls-3{fill:#7dd0df;}.cls-4{fill:#febf12;}.cls-5{fill:#282828;}</style>-->
+    <!--</defs>-->
+    <!--<title>jmlogo</title>-->
+    <!--<rect class="cls-1" x="27.22" width="20.06" height="163.78"/>-->
+    <!--<animate -->
+    <!--<rect class="cls-2" y="4" width="20.06" height="163.78"/>-->
+    <!--<rect class="cls-3" x="13.9" y="13.1" width="20.06" height="163.78"/>-->
+    <!--<rect class="cls-4" x="43.1" y="7.45" width="20.06" height="163.78"/>-->
+    <!--<path class="cls-5" d="M243.5,323a12,12,0,0,1-.5,3.43,8.88,8.88,0,0,1-1.63,3.1,8.24,8.24,0,0,1-3,2.26,10.8,10.8,0,0,1-4.58.86,9.63,9.63,0,0,1-6-1.82,8.48,8.48,0,0,1-3.07-5.47l4-.82a5.64,5.64,0,0,0,1.66,3.19,4.86,4.86,0,0,0,3.43,1.18,5.71,5.71,0,0,0,2.83-.62,4.53,4.53,0,0,0,1.7-1.63,7,7,0,0,0,.84-2.33,15.15,15.15,0,0,0,.24-2.71V297.82h4V323Z" transform="translate(-224.04 -108.31)"/>-->
+    <!--<path class="cls-5" d="M252,297.82h6l11.52,26.64h0.1l11.62-26.64H287v34h-4V303.29h-0.1L270.72,331.8h-2.45l-12.19-28.51H256V331.8h-4v-34Z" transform="translate(-224.04 -108.31)"/>-->
+    <!--</svg>-->
+    <!--*************-->
 
+    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    viewBox="0 0 1012 1012" style="enable-background:new 0 0 212 212;" xml:space="preserve" fill="transparent" stroke="red">
+    <path class="bottle" d="M395.29,184.945h-13.957l-0.771-19.459c2.3-1.758,4.241-4.089,5.631-6.746c6.303-12.044,9.633-25.65,9.633-39.272
+    c0-46.726-38.014-84.758-84.74-84.758c-12.425,0-24.543,2.696-35.596,7.814C257.796,16.39,227.981,0,195.383,0
+    c-38.054,0-72.255,22.483-87.841,56.237c-31.187,4.132-55.33,30.895-55.33,63.193c0,15.35,5.463,29.999,15.438,41.571
+    l-12.016,300.97c-0.533,13.351,4.272,25.731,13.53,35.366C78.423,506.974,90.882,512,104.244,512h239.552
+    c13.363,0,25.823-5.026,35.08-14.662c9.258-9.635,14.063-22.236,13.53-35.587l-0.199-4.933h3.083
+    c35.564,0,64.497-28.773,64.497-64.337V249.134C459.788,213.57,430.855,184.945,395.29,184.945z M349.761,469.525
+    c-0.911,0.949-2.898,2.098-5.965,2.098H104.244c-3.066,0-5.054-1.311-5.965-2.26c-0.912-0.949-2.423-2.533-2.3-5.596
+    L107.72,170.14h47.274c3.892,5.384,8.581,11.294,14.016,16.112c4.241,3.762,8.775,6.79,13.521,9.76v46.807
+    c0,11.149,9.039,20.189,20.189,20.189s20.189-9.039,20.189-20.189v-32.162c4.544,0.62,9.141,0.937,13.759,0.937
+    c3.7,0,7.413,0.121,11.124-0.288c29.15-3.219,54.733-19.63,71.237-41.164h21.292l11.74,293.765
+    C352.184,466.97,350.674,468.576,349.761,469.525z M354.395,129.763h-17.777c0.201-1.346,0.402-2.394,0.571-3.44
+    c1.779-11.008-5.701-21.534-16.708-23.314c-11-1.774-21.373,5.62-23.151,16.627c-4.393,27.175-26.587,48.227-53.972,51.252
+    c-17.238,1.899-34.571-3.634-47.559-15.15c-8.136-7.215-12.987-17.821-13.311-29.081c-0.319-11.144-9.584-19.878-20.761-19.606
+    c-11.144,0.32-19.921,9.935-19.6,21.082c0.012,0.437,0.051,0.284,0.071,1.63H94.689c-1.374-4.038-2.101-6.626-2.101-10.01
+    c0-12.886,10.483-23.533,23.37-23.533c0.976,0,1.976-0.094,3.061,0.048c9.96,1.303,19.388-4.933,22.073-14.629
+    c6.729-24.299,29.055-41.268,54.29-41.268c23.984,0,45.379,15.225,53.237,37.883c2.222,6.408,7.513,11.271,14.085,12.948
+    c6.575,1.673,13.545-0.061,18.565-4.622c8.172-7.427,18.762-11.516,29.819-11.516c24.462,0,44.362,20.225,44.362,44.687
+    C355.45,123.056,355.096,125.725,354.395,129.763z M395.29,416.442h-4.696l-7.649-191.119h12.345c13.3,0,24.12,10.512,24.12,23.81
+    v143.348h0C419.41,405.782,408.591,416.442,395.29,416.442z">
+
+    </path>
+    <path class="bubble" d="M146.192,197.058c-11.149,0-20.189,9.039-20.189,20.189v57.874c0,11.149,9.039,20.189,20.189,20.189
+    s20.189-9.039,20.189-20.189v-57.874C166.38,206.097,157.341,197.058,146.192,197.058z">
+    </path>
+    </svg>
+
+    <svg width="300" height="300" viewBox="0 0 300 300">
+    <style>
+    .cls-1 {
+    fill: red;
+    }
+    </style>
+    <circle class="cls-1" cx="66" cy="148" r="30">
+    <animate attributeName="opacity"
+    dur="1.5s"
+    values="0;1;0"
+    repeatCount="indefinite"
+    begin="0.1"/>
+
+    </circle>
+    <circle class="cls-1" cx="150" cy="148" r="30">
+    <animate attributeName="opacity"
+    dur="1.5s"
+    values="0;1;0"
+    repeatCount="indefinite"
+    begin="0.3"/>
+    </circle>
+    <circle class="cls-1" cx="234" cy="148" r="30">
+    <animate attributeName="opacity"
+    dur="1.5s"
+    values="0;1;0"
+    repeatCount="indefinite"
+    begin="0.6"/>
+    </circle>
+    </svg>
+
+
+    <!--<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"-->
+    <!--width="340px" height="333px" viewBox="0 0 340 333" enable-background="new 0 0 340 333" xml:space="preserve">-->
+
+    <!--<path class="path" fill="#FFFFFF" stroke="#000000" stroke-width="4" stroke-miterlimit="10" d="M66.039,133.545c0,0-21-57,18-67s49-4,65,8-->
+    <!--s30,41,53,27s66,4,58,32s-5,44,18,57s22,46,0,45s-54-40-68-16s-40,88-83,48s11-61-11-80s-79-7-70-41-->
+    <!--C46.039,146.545,53.039,128.545,66.039,133.545z"/>-->
+
+    <!--</svg>-->
+
+    <!--<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"-->
+         <!--preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="640" height="640">-->
+        <!--<defs>-->
+            <!--<path class="max-animation" d="M23.14 124.77L24.6 136.47L32.65 144.52L43.61 144.52L50.92 134.28L56.77 120.39L61.16 105.76L64.09-->
+            <!--91.14L66.28 78.71L64.82 88.95L61.16 103.57L56.77 118.19L54.58 128.43L58.24 137.94L70.67 138.67L77.98-->
+            <!--130.62L84.56 120.39L89.68 105.03L94.06 94.8L88.95 108.69L84.56 118.19L80.17 129.16L78.71 139.4L87.48-->
+            <!--145.25L97.72 144.52L105.03 136.47L112.34 128.43 M148.9 113.81L136.47 113.08L126.24 113.81L116.73-->
+            <!--118.19L109.42 128.43L107.96 139.4L109.42 150.37L118.92 154.02L129.16 153.29L137.94 146.71L144.52-->
+            <!--136.47L150.37 125.51L154.02 114.54L148.9 125.51L148.9 135.74L145.98 147.44L141.59 157.68L153.29-->
+            <!--162.06L162.06 156.22L164.26 145.98L167.91 132.82L172.3 122.58L177.42 112.34L175.96 123.31L173.03-->
+            <!--134.28L169.38 146.71L166.45 156.95L169.38 145.98L175.96 137.2L186.19 131.35L201.55 126.24L217.63 124.04-->
+            <!--M173.76 141.59L185.46 143.05L195.7 148.9L205.2 154.02L211.05 162.8 M244.69 126.24L233.72 126.97L224.22-->
+            <!--131.35L217.63 140.86L213.98 151.1L213.25 162.06L220.56 169.38L231.53 171.57L242.49 170.84 M42.15-->
+            <!--230.8L45.81 241.76L50.92 251.27L61.16 257.85L74.32 253.46L80.9 240.3L83.1 227.14L84.56 216.9L86.02-->
+            <!--205.2L88.22 192.77L86.02 205.94L83.83 219.1L83.83 230.8L83.83 242.49L83.83 252.73L96.26 255.66L104.3-->
+            <!--249.08L108.69 239.57L107.23 251.27L115.27 257.85L125.51 254.92L129.16 245.42L126.97 255.66L122.58-->
+            <!--265.89L122.58 277.59L122.58 289.29L116 298.8L105.76 298.8L105.76 288.56L113.08 280.52L121.85 273.94L128.43-->
+            <!--265.16L133.55 255.66L140.86 247.61L148.17 239.57L147.44 249.81L144.52 260.04L154.75 261.51L162.06-->
+            <!--253.46L168.65 245.42L163.53 254.19L158.41 262.97L152.56 273.2L150.37 284.17L162.06 286.37L170.11-->
+            <!--277.59L175.96 268.09L180.34 258.58L184 249.08L179.61 260.77L176.69 272.47L173.76 282.71L187.66 283.44L197.16-->
+            <!--275.4L199.35 263.7L203.01 254.19L200.82 268.09L198.62 279.05L204.47 287.83L212.52 279.78L216.9 270.28L221.29-->
+            <!--260.04L219.1 270.28L216.9 280.52L222.75 289.29L232.26 280.52L237.38 271.74L240.3 261.51L238.84 273.2L236.65-->
+            <!--284.17L236.65 294.41L247.61 287.1L253.46 276.86L256.39 266.62L254.92 279.05L252 290.75L258.58 298.8L268.09-->
+            <!--295.14L274.67 284.17L277.59 273.94L278.32 285.63L276.86 295.87L287.1 293.68L293.68 281.98L290.02-->
+            <!--292.22L297.33 299.53 M279.78 236.65L286.37 245.42L295.14 250.54 M355.1 222.75L348.52 236.65L344.86-->
+            <!--248.34L342.67 261.51L341.2 273.94L339.74 286.37L337.55 301.72L337.55 313.42L338.28 323.66 M355.1-->
+            <!--222.75L348.52 236.65L344.86 248.34L342.67 261.51L341.2 273.94L339.74 286.37L337.55 301.72L337.55-->
+            <!--313.42L338.28 323.66 M356.56 224.22L374.84 224.22L387.27 224.22L399.7 224.22L409.94 227.87L419.44-->
+            <!--237.38L423.1 248.34L423.1 258.58L414.32 269.55L401.16 273.2L389.46 274.67L377.76 276.13L366.8 279.05L356.56-->
+             <!--281.98L346.32 284.17 M417.25 323.66L423.83 315.61L431.14 307.57L440.65 295.14L450.15 281.25L457.46-->
+             <!--265.16L461.12 249.81L466.97 237.38L466.24 248.34L466.24 268.09L466.24 281.98L467.7 295.14L481.59-->
+             <!--289.29L488.9 272.47L492.56 262.24L496.22 252L499.87 238.11L503.53 227.87L506.45 259.31L506.45-->
+             <!--270.28L506.45 281.25L507.91 298.06L510.84 308.3L512.3 318.54"-->
+                  <!--id="c6nilQLYG"></path>-->
+        <!--</defs>-->
+        <!--<g>-->
+            <!--<g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#c6nilQLYG" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#a1Ns7g3DUD" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#b57LI6bUzo" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#ab2nMFUcSN" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#c6ZN1yzDfn" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#a4axGooOam" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#f1kxVD3jgP" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#bVUWRDFZN" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+                <!--<g>-->
+                    <!--<g>-->
+                        <!--<use xlink:href="#a69Fm4ggkE" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"-->
+                             <!--stroke-opacity="1"></use>-->
+                    <!--</g>-->
+                <!--</g>-->
+            <!--</g>-->
+        <!--</g>-->
+    <!--</svg>-->
 </ion-content>
