--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,24 +1,26 @@
-<ion-header swipeAll>
+<ion-header swipeAll #head>
     <ion-toolbar>
         <ion-buttons slot="start">
             <ion-back-button></ion-back-button>
         </ion-buttons>
         <ion-title class="title-top" hidden>main</ion-title>
-        <ion-label color="success" class="top-price">2000 UAH</ion-label>
+        <ion-label color="success" class="top-price">{{this.transService.balance}} UAH</ion-label>
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding [scrollY]="qq()">
+<ion-content padding (ionScroll)="qq($event)" no-padding hide-header [header]="head" overflow-scroll="true"
+             appHideHeader="scrollY" id="qq">
     <ion-card class="price-card" (swiperight)="swipeAll($event)">
         <ion-card-content>
-            <ion-label color="success">2000 UAH</ion-label>
+            <ion-label color="success">{{this.transService.balance}} UAH</ion-label>
         </ion-card-content>
     </ion-card>
     <ion-card class="inf-list">
         <ion-list>
-            <ion-item *ngFor="let i of items">
-                <div>{{i.description}}: </div>
-                <div [className]="i.type === 'decrease' ? 'decrease-color' : 'increase-color'">{{i.cost}}</div>
+            <ion-item *ngFor="let x of this.transService.transactions; let i = index">
+                <div>{{i+1}})</div>
+                <div>{{x.description !== null ? x.description : ''}}:</div>
+                <div [className]="x.type === 'decrease' ? 'decrease-color' : 'increase-color'">{{x.cost}}</div>
             </ion-item>
         </ion-list>
 
